--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
 
-$font-primary: Staatliches,sans-serif;
+$font-primary: Staatliches, sans-serif;
 $primary-color: purple;
-$hover-color:green;
-
+$hover-color: green;
+$button-color: Magenta;
 
 * {
     padding: 0;
-    margin:0;
+    margin: 0;
     box-sizing: border-box;
     font-family: $font-primary;
 }
@@ -18,24 +18,24 @@ $hover-color:green;
     align-items: center;
     flex-wrap: wrap;
     flex-direction: row;
-        .breadcrumb__list {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-            list-style-type: none;
-            .breadcrumb__item {
-                margin: 0 20px;
-                .breadcrumb__link {
-                    font-size: 2rem;
-                    text-decoration: none;
-                }
-                .breadcrumb__link:hover {
-                    color:$hover-color;
-                    transition: all .3s ease-in;
-                }
+    .breadcrumb__list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        list-style-type: none;
+        .breadcrumb__item {
+            margin: 0 20px;
+            .breadcrumb__link {
+                font-size: 2rem;
+                text-decoration: none;
+            }
+            .breadcrumb__link:hover {
+                color: $hover-color;
+                transition: all 0.3s ease-in;
             }
         }
+    }
 }
 
 .button {
@@ -44,21 +44,65 @@ $hover-color:green;
     align-items: center;
     flex-wrap: wrap;
     flex-direction: row;
-        span {
-            margin: 0 20px;
-            text-decoration: none;
-            background-color: $primary-color; /* Green */
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            border-radius: 10px;
+    text-decoration: none;
+    margin: 10vh;
+    span {
+        margin: 10px 20px;
+        text-decoration: none;
+        background-color: $button-color; /* Magenta */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        border-radius: 10px;
+    }
+    span:hover {
+        background-color: $hover-color;
+        transition: all 0.2s ease-in;
+    }
+}
+.card__section {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    .card__item {
+        width: 29%;
+        margin-right: 3.5%;
+        position: relative;
+        box-sizing: border-box;
+        margin: 0 auto;
+        .card__aside {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            .card__figure {
+                width: 100%;
+                img {
+                    display: inline-block;
+                    max-width: 100%;
+                    height: auto;
+                }
+            }
         }
-        span:hover {
-            background-color:$hover-color;
-            transition: all .2s ease-in;
+        .card__footer .card__actions .card__button {
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            flex-wrap: wrap;
+            flex-direction: row;
+            text-decoration: none;
+            margin: 1vh;
         }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .card__section .card__item {
+        width: 65%;
+        padding: 2vh;
+    }
 }
