fixed cursor for card button

--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -96,6 +96,7 @@ $button-color: Magenta;
             flex-direction: row;
             text-decoration: none;
             margin: 1vh;
+            cursor: pointer;
         }
     }
 }
