--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -160,6 +160,7 @@
           flex-direction: row;
   text-decoration: none;
   margin: 1vh;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 600px) {
