Added list items

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -163,6 +163,20 @@
   cursor: pointer;
 }
 
+.list {
+  text-align: center;
+  margin: 0 auto;
+  width: fit-content;
+  width: -moz-fit-content;
+  width: -webkit-fit-content;
+  font-size: 2rem;
+}
+
+.list .list__item .list__item--second {
+  margin-left: 15px;
+  color: purple;
+}
+
 @media only screen and (max-width: 600px) {
   .card__section .card__item {
     width: 65%;
