Added responsiveness to checkbox

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -215,5 +215,14 @@
     width: 65%;
     padding: 2vh;
   }
+  .checkbox {
+    padding: 10px;
+  }
+  .checkbox .checkbox__body {
+    font-size: 1.5rem;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
