--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -211,6 +211,32 @@
   text-decoration: none;
 }
 
+.grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 5%;
+          column-gap: 5%;
+}
+
+.grid .item {
+  width: 30%;
+  background-color: blue;
+  color: #fff;
+  text-align: center;
+}
+
+.modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal .modal__main {
+  margin: auto;
+  padding: 10px;
+}
+
 @media only screen and (max-width: 600px) {
   .card__section .card__item {
     width: 65%;
