--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -253,6 +253,48 @@
   margin: auto;
 }
 
+.js-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 25vh;
+}
+
+.js-container .btn-js {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: auto;
+  padding: 15px 32px;
+  font-size: 1.25rem;
+  background-color: teal;
+  color: #fff;
+}
+
+.js-container .btn-js #demo {
+  font-size: 6rem;
+}
+
 @media only screen and (max-width: 600px) {
   .card__section .card__item {
     width: 65%;
