--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -295,7 +295,18 @@
   font-size: 6rem;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
+  .js-container {
+    height: auto;
+  }
+  .js-container .js-container #demo {
+    font-size: 4rem;
+    text-align: center;
+    padding: 20px;
+  }
+}
+
+@media only screen and (max-width: 700px) and (max-width: 600px) {
   .card__section .card__item {
     width: 65%;
     padding: 2vh;
