--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -264,7 +264,16 @@ $button-color: Magenta;
 
 
 
-
+@media only screen and (max-width: 700px) {
+        .js-container {
+            height: auto;
+            .js-container #demo {
+                font-size: 4rem;
+                text-align: center;
+                padding: 20px;
+        }
+    
+}
 
 
 
@@ -284,5 +293,5 @@ $button-color: Magenta;
             padding: 10px;
         }
     }
-    
+    }
 }
