--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -190,7 +190,7 @@
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   background: purple;
-  font-family: 'Staatliches';
+  font-family: "Staatliches";
   color: white;
   margin: 10px 0;
 }
