--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -298,15 +298,16 @@
 @media only screen and (max-width: 700px) {
   .js-container {
     height: auto;
+    padding: 20px;
   }
-  .js-container .js-container #demo {
+  .js-container #demo {
     font-size: 4rem;
     text-align: center;
     padding: 20px;
   }
 }
 
-@media only screen and (max-width: 700px) and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
   .card__section .card__item {
     width: 65%;
     padding: 2vh;
