Changed padding for js-container

--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -262,12 +262,11 @@ $button-color: Magenta;
     .js-container {
         height: auto;
         padding:20px;
-       
     }
     .js-container #demo {
         font-size: 4rem;
         text-align: center;
-        padding: 20px;
+        padding: 4vh 0;
     }
 }    
 
