--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -295,6 +295,33 @@
   font-size: 6rem;
 }
 
+.myForm {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1vh 0;
+}
+
+.myForm p {
+  font-size: 2em;
+}
+
+.myForm .myForm--button--container {
+  padding: 10px;
+}
+
 @media only screen and (max-width: 700px) {
   .js-container {
     height: auto;
