--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -258,6 +258,21 @@ $button-color: Magenta;
     }
 }
 
+.myForm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 1vh 0;
+    p {
+        font-size: 2em;
+    }
+    .myForm--button--container {
+        padding: 10px;
+    }
+}
+
 @media only screen and (max-width: 700px) {
     .js-container {
         height: auto;
