--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -259,6 +259,7 @@ $button-color: Magenta;
 }
 
 .myForm {
+    background-color: orange;
     display: flex;
     justify-content: center;
     align-items: center;
