Added bg-color to js-container

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -254,6 +254,8 @@
 }
 
 .js-container {
+  background-color: maroon;
+  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
