--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -236,6 +236,8 @@ $button-color: Magenta;
 }
 
 .js-container {
+    background-color: maroon;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
